[gd_scene load_steps=5 format=3 uid="uid://b2ylhdcnkqlwe"]

[ext_resource type="Script" uid="uid://4od7pxqycoep" path="res://Components/Scripts/rock_piece.gd" id="1_kor1n"]
[ext_resource type="Texture2D" uid="uid://by6ssq1ieamfy" path="res://Assets/default/pngkey.com-diamond-pattern-png-510502.png" id="2_4yxh3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kor1n"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4yxh3"]
radius = 2.0

[node name="RockPiece" type="RigidBody2D"]
mass = 0.025
gravity_scale = 0.2
script = ExtResource("1_kor1n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kor1n")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.0011130208, 0.0009955876)
texture = ExtResource("2_4yxh3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4yxh3")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
